--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Two Days. Unlimited Music. Unforgettable Memories."
     />
     <!-- Change apple-touch-icon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/../favicon.ico" />
